find_package(Doxygen)
if(DOXYGEN_FOUND)
    set(doxyfile ${CMAKE_CURRENT_BINARY_DIR}/doxyfile)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/doxygen/doxyfile.in ${doxyfile})
    add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${doxyfile})
    if(USE_PROJECT_FOLDERS)
      set_target_properties(doc PROPERTIES FOLDER "Documentation")
    endif(USE_PROJECT_FOLDERS)
endif(DOXYGEN_FOUND)

